--- a/index.html
+++ b/index.html
@@ -37,6 +37,131 @@
     </style>
   </head>
   <body>
-    <h1 class=""></h1>
+    <!-- ========== Main Content ====== -->
+    <main class="max-w-screen-xl mx-auto px-3 lg:px-4">
+      <header
+        class="flex flex-col lg:flex-row items-center pt-10 mb-20 gap-10 px-5 lg:px-20"
+      >
+        <!-- ====== Text- section ===== -->
+        <div class="w-full lg:w-1/2 text-left lg:text-left">
+          <h1
+            class=" text-5xl lg:text-5xl font-bold leading-tight manrope-font"
+          >
+            It's good <br />
+            tea time at The <br />
+            Tea House
+          </h1>
+          <p class="mt-5 text-gray-500 text-sm sm:text-base">
+            Tea and Botanical Solutions Supplier Give Optimum
+            <br class="hidden sm:block" />
+            Satisfaction To Your Taste Buds.
+          </p>
+          <button
+            class="rounded-lg px-6 py-3 mt-6 bg-gradient-to-r from-orange-400 to-orange-600 text-white font-medium shadow-md hover:shadow-lg transition"
+          >
+            <i class="pr-3 fa-solid fa-arrow-up-right-from-square"></i>Explore
+            More
+          </button>
+        </div>
+
+        <!-- ======== img-section ======== -->
+        <div class="w-full lg:w-1/2 ">
+          <img
+            src="./images/banner.png"
+            alt="banner"
+            class="max-w-full h-auto"
+          />
+        </div>
+      </header>
+
+      <!-- our featured section design start -->
+      <section class="mx-auto px-3 lg:px-4">
+        <div>
+          <h2>dfgdfg</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+            consequuntur!
+          </p>
+        </div>
+        <div class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1">
+          <div
+            class="border-2 border-blue-500 rounded-md p-6 text-center w-56 bg-white shadow-md"
+          >
+            <!-- Image -->
+            <img
+              src="./images/fresh-1.png"
+              alt="Milk Tea"
+              class="mx-auto mb-4 w-32"
+            />
+
+            <!-- Title -->
+            <h2 class="text-lg font-semibold text-gray-800">Milk Tea</h2>
+
+            <!-- Description -->
+            <p class="text-sm text-gray-500 mt-1">
+              Creamer could be replaced <br />
+              by fresh milk
+            </p>
+          </div>
+          <div
+            class="border-2 border-blue-500 rounded-md p-6 text-center w-56 bg-white shadow-md"
+          >
+            <!-- Image -->
+            <img
+              src="./images/fresh-1.png"
+              alt="Milk Tea"
+              class="mx-auto mb-4 w-32"
+            />
+
+            <!-- Title -->
+            <h2 class="text-lg font-semibold text-gray-800">Milk Tea</h2>
+
+            <!-- Description -->
+            <p class="text-sm text-gray-500 mt-1">
+              Creamer could be replaced <br />
+              by fresh milk
+            </p>
+          </div>
+          <div
+            class="border-2 border-blue-500 rounded-md p-6 text-center w-56 bg-white shadow-md"
+          >
+            <!-- Image -->
+            <img
+              src="./images/fresh-1.png"
+              alt="Milk Tea"
+              class="mx-auto mb-4 w-32"
+            />
+
+            <!-- Title -->
+            <h2 class="text-lg font-semibold text-gray-800">Milk Tea</h2>
+
+            <!-- Description -->
+            <p class="text-sm text-gray-500 mt-1">
+              Creamer could be replaced <br />
+              by fresh milk
+            </p>
+          </div>
+          <div
+            class="border-2 border-blue-500 rounded-md p-6 text-center w-56 bg-white shadow-md"
+          >
+            <!-- Image -->
+            <img
+              src="./images/fresh-1.png"
+              alt="Milk Tea"
+              class="mx-auto mb-4 w-32"
+            />
+
+            <!-- Title -->
+            <h2 class="text-lg font-semibold text-gray-800">Milk Tea</h2>
+
+            <!-- Description -->
+            <p class="text-sm text-gray-500 mt-1">
+              Creamer could be replaced <br />
+              by fresh milk
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
