responsive card desing

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
       >
         <!-- ====== Text- section ===== -->
         <div class="w-full lg:w-1/2 text-left lg:text-left">
-          <h1
-            class=" text-5xl lg:text-5xl font-bold leading-tight manrope-font"
-          >
+          <h1 class="text-5xl lg:text-5xl font-bold leading-tight manrope-font">
             It's good <br />
             tea time at The <br />
             Tea House
@@ -65,7 +63,7 @@
         </div>
 
         <!-- ======== img-section ======== -->
-        <div class="w-full lg:w-1/2 ">
+        <div class="w-full lg:w-1/2">
           <img
             src="./images/banner.png"
             alt="banner"
@@ -75,86 +73,77 @@
       </header>
 
       <!-- our featured section design start -->
-      <section class="mx-auto px-3 lg:px-4">
-        <div>
-          <h2>dfgdfg</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione,
-            consequuntur!
+      <section class="mx-auto lg:px-20 px-5 mb-20 ">
+        <div class="mt-10 mb-20">
+          <h2 class="text-center font-bold text-3xl mb-3">
+            Our Featured Products
+          </h2>
+          <p class="text-gray-400 text-center max-w-3xl mx-auto">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
           </p>
         </div>
-        <div class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1">
+
+        <!-- Product Grid -->
+        <div class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-8">
+          <!-- Card -->
           <div
-            class="border-2 border-blue-500 rounded-md p-6 text-center w-56 bg-white shadow-md"
+            class="border-2 border-blue-500 rounded-md p-6 text-center bg-white shadow-md"
           >
-            <!-- Image -->
             <img
               src="./images/fresh-1.png"
               alt="Milk Tea"
               class="mx-auto mb-4 w-32"
             />
-
-            <!-- Title -->
             <h2 class="text-lg font-semibold text-gray-800">Milk Tea</h2>
-
-            <!-- Description -->
             <p class="text-sm text-gray-500 mt-1">
               Creamer could be replaced <br />
               by fresh milk
             </p>
           </div>
+
+          <!-- Duplicate for demo -->
           <div
-            class="border-2 border-blue-500 rounded-md p-6 text-center w-56 bg-white shadow-md"
+            class="border-2 border-blue-500 rounded-md p-6 text-center bg-white shadow-md"
           >
-            <!-- Image -->
             <img
-              src="./images/fresh-1.png"
+              src="./images/fresh-2.png"
               alt="Milk Tea"
               class="mx-auto mb-4 w-32"
             />
-
-            <!-- Title -->
             <h2 class="text-lg font-semibold text-gray-800">Milk Tea</h2>
-
-            <!-- Description -->
             <p class="text-sm text-gray-500 mt-1">
               Creamer could be replaced <br />
               by fresh milk
             </p>
           </div>
+
           <div
-            class="border-2 border-blue-500 rounded-md p-6 text-center w-56 bg-white shadow-md"
+            class="border-2 border-blue-500 rounded-md p-6 text-center bg-white shadow-md"
           >
-            <!-- Image -->
             <img
-              src="./images/fresh-1.png"
+              src="./images/tea-3.png"
               alt="Milk Tea"
               class="mx-auto mb-4 w-32"
             />
-
-            <!-- Title -->
             <h2 class="text-lg font-semibold text-gray-800">Milk Tea</h2>
-
-            <!-- Description -->
             <p class="text-sm text-gray-500 mt-1">
               Creamer could be replaced <br />
               by fresh milk
             </p>
           </div>
+
           <div
-            class="border-2 border-blue-500 rounded-md p-6 text-center w-56 bg-white shadow-md"
+            class="border-2 border-blue-500 rounded-md p-6 text-center bg-white shadow-md"
           >
-            <!-- Image -->
             <img
-              src="./images/fresh-1.png"
+              src="./images/tea-4.png"
               alt="Milk Tea"
               class="mx-auto mb-4 w-32"
             />
-
-            <!-- Title -->
             <h2 class="text-lg font-semibold text-gray-800">Milk Tea</h2>
-
-            <!-- Description -->
             <p class="text-sm text-gray-500 mt-1">
               Creamer could be replaced <br />
               by fresh milk
