--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </header>
 
       <!-- our featured section design start -->
-      <section class="mx-auto lg:px-20 px-5 mb-20 ">
+      <section class="mx-auto lg:px-20 px-5 mb-20">
         <div class="mt-10 mb-20">
           <h2 class="text-center font-bold text-3xl mb-3">
             Our Featured Products
@@ -151,6 +151,42 @@
           </div>
         </div>
       </section>
+
+      <!-- ========== News & Events desing ========= -->
+      <section class="mx-auto lg:px-20 px-5 mb-20">
+        <div>
+          <h1 class="text-3xl lg:text-4xl font-bold manrope-font text-center ">
+            News & Events
+          </h1>
+          <p class="text-gray-500 text-center pt-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+        </div>
+      </section>
+      <!-- =========== Card Section ========= -->
+         <section class="mx-auto lg:px-20 px-5 mb-20">
+            <!-- ======= Card Container ===== -->
+             <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- 1st card ========= -->
+                <div class="w-full  border rounded-xl shadow-xl p-3 ">
+                   <img  src="/images/news-1.png" alt="">
+                   <p class=""text-gray-500 pt-3">Feb 05, 2027</p>
+                   <h4 class="  pt-3 font-bold text-2xl">Collecting 8 points for discount</h4>
+                   <p class="text-gray-500  pt-3">There are many variations of passages of Lorem Ipsum available.</p>
+                </div>
+                <div class="w-full  border rounded-xl shadow-xl p-3 ">
+                   <img src="/images/news-1.png" alt="">
+                   <p class=""text-gray-500 pt-3">Feb 05, 2027</p>
+                   <h4 class="  pt-3 font-bold text-2xl">Collecting 8 points for discount</h4>
+                   <p class="text-gray-500  pt-3">There are many variations of passages of Lorem Ipsum available.</p>
+                </div>
+                <div class="w-full  border rounded-xl shadow-xl p-3 ">
+                   <img src="/images/news-1.png" alt="">
+                   <p class=""text-gray-500 pt-3">Feb 05, 2027</p>
+                   <h4 class="  pt-3 font-bold text-2xl">Collecting 8 points for discount</h4>
+                   <p class="text-gray-500  pt-3">There are many variations of passages of Lorem Ipsum available.</p>
+                </div>
+             </div>
+         </section>
+         
     </main>
   </body>
 </html>
