make a resoonsive rating card

--- a/index.html
+++ b/index.html
@@ -63,13 +63,22 @@
         </div>
 
         <!-- ======== img-section ======== -->
-        <div class="w-full lg:w-1/2">
+        <div class="w-full lg:w-1/2 relative">
           <img
             src="./images/banner.png"
             alt="banner"
             class="max-w-full h-auto"
           />
+           <!-- ========Rating-- Card ======== -->
+              <div class=" flex items-center absolute lg:bottom-1 bottom-0 w-2xs gap-10 h-auto bg-white px-5 py-5 rounded-2xl shadow-lg">
+              <i class="fa-solid fa-star"></i>
+             <div class="">
+               <h1 class="'font-bold text-4xl">5.00</h1>
+              <p class="text-gray-500">Tust polot rating</p>
+             </div>
         </div>
+        </div>
+    
       </header>
 
       <!-- our featured section design start -->
@@ -86,7 +95,7 @@
           </p>
         </div>
 
-        <!-- Product Grid -->
+        <!-- Product card -->
         <div class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-8">
           <!-- Card -->
           <div
