make another responsive section

--- a/index.html
+++ b/index.html
@@ -161,6 +161,28 @@
         </div>
       </section>
 
+      <!-- ======= Great tea Section =========== -->
+       <section class="mx-auto lg:px-20 px-5 mb-20">
+        <!-- ====== Container ======= -->
+          <div class="grid lg:grid-cols-2 grid-cols-1">
+            <!-- ========= IMG ========= -->
+              <div>
+
+              </div>
+              <!-- ======== TEXT ========= -->
+               <DIV>
+                <h1 class="font-bold text-4xl mb-5">Great Tea, Freshly <br> Presented</h1>
+                <p class=" text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <br>
+                <h4 class="font-bold text-2xl " >Unique Taste</h4>
+                <p class=" text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <br>
+                <h4 class="font-bold text-2xl ">Premium Quality</h4>
+                <p class=" text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+               </DIV>
+          </div>
+       </section>
+
       <!-- ========== News & Events desing ========= -->
       <section class="mx-auto lg:px-20 px-5 mb-20">
         <div>
