Great tea section done

--- a/index.html
+++ b/index.html
@@ -161,13 +161,27 @@
         </div>
       </section>
 
-      <!-- ======= Great tea Section =========== -->
+      <!-- ======= Great tea Section =========== =========================-->
+
        <section class="mx-auto lg:px-20 px-5 mb-20">
         <!-- ====== Container ======= -->
-          <div class="grid lg:grid-cols-2 grid-cols-1">
+          <div class="grid lg:grid-cols-2 grid-cols-1 ">
             <!-- ========= IMG ========= -->
-              <div>
+              <div class=" grid grid-cols-2 grid-rows-3 gap-3  lg:w-6/7 mb-5">
 
+
+                <div class="h-38 bg-gradient-to-r from-orange-200 to-orange-100 rounded-xl "></div>
+                <div class="bg-orange-50 rounded-xl row-span-2 ">
+                  <img class="mx-auto" src="./images/fresh-1.png" alt="">
+                </div>
+                <div class="bg-orange-50 rounded-xl row-span-2 ">
+                  <img class="mx-auto" src="./images/fresh-2.png" alt="">
+                </div>
+                 <div class="h-38 bg-gradient-to-r from-orange-200 to-orange-100 rounded-xl "></div>
+
+
+
+                   
               </div>
               <!-- ======== TEXT ========= -->
                <DIV>
@@ -181,6 +195,25 @@
                 <p class=" text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
                </DIV>
           </div>
+       </section>
+
+       <!-- ============  Clint-Section ========== -->
+
+       <section class="mx-auto lg:px-20 px-5 mb-20 ">
+        <!-- -================ Container ========= -->
+             <div class="grid lg:grid-cols-2 gap-10 bg-gradient-to-r from-orange-400 to-orange-500 rounded-sm w-auto h-full px-20 pt-20">
+                 <!-- --------- text -====== -->
+                  <div class="">
+                     <h1 class="font-bold manrope-font text-left leading-13 text-white text-4xl mb-3">Meet Our Super  <br>Clients</h1>
+                     <p class="text-white mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                     <button class="px-4 py-3 text-black bg-white font-bold rounded-md">Show All</button>
+                     <img class="w-3xs pl-20 " src="./images/bg_cup.png" alt="">
+                  </div>
+                  <!-- ======= Card ========= -->
+                  <div>
+                     <h1>jdhfhj</h1>
+                  </div>
+             </div>
        </section>
 
       <!-- ========== News & Events desing ========= -->
@@ -204,13 +237,13 @@
                    <p class="text-gray-500  pt-3">There are many variations of passages of Lorem Ipsum available.</p>
                 </div>
                 <div class="w-full  border rounded-xl shadow-xl p-3 ">
-                   <img src="/images/news-1.png" alt="">
+                   <img src="/images/news-2.png" alt="">
                    <p class=""text-gray-500 pt-3">Feb 05, 2027</p>
                    <h4 class="  pt-3 font-bold text-2xl">Collecting 8 points for discount</h4>
                    <p class="text-gray-500  pt-3">There are many variations of passages of Lorem Ipsum available.</p>
                 </div>
                 <div class="w-full  border rounded-xl shadow-xl p-3 ">
-                   <img src="/images/news-1.png" alt="">
+                   <img src="/images/news-3.png" alt="">
                    <p class=""text-gray-500 pt-3">Feb 05, 2027</p>
                    <h4 class="  pt-3 font-bold text-2xl">Collecting 8 points for discount</h4>
                    <p class="text-gray-500  pt-3">There are many variations of passages of Lorem Ipsum available.</p>
